Move phase_game to game
