# lib/tournamentsapi_web/controllers/tournament_game_controller.ex
@@ -1,59 +1,0 @@
-defmodule TournamentsApiWeb.TournamentGameController do
-  use TournamentsApiWeb, :controller
-
-  alias TournamentsApi.Tournaments
-  alias TournamentsApi.Tournaments.TournamentGame
-
-  action_fallback TournamentsApiWeb.FallbackController
-
-  def index(conn, %{"phase_id" => phase_id}) do
-    tournament_games = Tournaments.list_tournament_games(phase_id)
-    render(conn, "index.json", tournament_games: tournament_games)
-  end
-
-  def create(conn, %{
-        "tournament_game" => tournament_game_params,
-        "phase_id" => phase_id
-      }) do
-    tournament_game_params = Map.merge(tournament_game_params, %{"phase_id" => phase_id})
-
-    with {:ok, %TournamentGame{} = created_tournament_game} <-
-           Tournaments.create_tournament_game(tournament_game_params) do
-      tournament_game = Tournaments.get_tournament_game!(created_tournament_game.id, phase_id)
-
-      conn
-      |> put_status(:created)
-      |> put_resp_header(
-        "location",
-        Routes.tournament_game_path(conn, :show, phase_id, tournament_game)
-      )
-      |> render("show.json", tournament_game: tournament_game)
-    end
-  end
-
-  def show(conn, %{"id" => id, "phase_id" => phase_id}) do
-    tournament_game = Tournaments.get_tournament_game!(id, phase_id)
-    render(conn, "show.json", tournament_game: tournament_game)
-  end
-
-  def update(conn, %{
-        "id" => id,
-        "tournament_game" => tournament_game_params,
-        "phase_id" => phase_id
-      }) do
-    tournament_game = Tournaments.get_tournament_game!(id, phase_id)
-
-    with {:ok, %TournamentGame{} = tournament_game} <-
-           Tournaments.update_tournament_game(tournament_game, tournament_game_params) do
-      render(conn, "show.json", tournament_game: tournament_game)
-    end
-  end
-
-  def delete(conn, %{"id" => id, "phase_id" => phase_id}) do
-    tournament_game = Tournaments.get_tournament_game!(id, phase_id)
-
-    with {:ok, %TournamentGame{}} <- Tournaments.delete_tournament_game(tournament_game) do
-      send_resp(conn, :no_content, "")
-    end
-  end
-end
